@startuml

title __SYSTEM's Class Diagram__\n

  namespace  {
    namespace ystem {
      class system.AdministratorParser {
          + parse()
      }
    }
  }
  

  namespace  {
    namespace ystem {
      class system.CSVReader {
          + read()
      }
    }
  }
  

  namespace  {
    namespace ystem {
      interface system.CSVReader.CSVParser {
          {abstract} + parse()
      }
    }
  }
  

  namespace  {
    namespace ystem {
      class system.DoctorParser {
          - allAppointmentOutcomeRecords : ArrayList<AppointmentOutcomeRecord>
          - storage : ArrayList<Inventory>
          + DoctorParser()
          + parse()
      }
    }
  }
  

  namespace  {
    namespace ystem {
      class system.HMS {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace ystem {
      class system.InventoryParser {
          + parse()
      }
    }
  }
  

  namespace  {
    namespace ystem {
      class system.PatientParser {
          - allAppointments : ArrayList<Appointment>
          + PatientParser()
          + parse()
      }
    }
  }
  

  namespace  {
    namespace ystem {
      class system.PharmacistParser {
          - allAppointmentOutcomeRecords : ArrayList<AppointmentOutcomeRecord>
          - storage : ArrayList<Inventory>
          + PharmacistParser()
          + parse()
      }
    }
  }
  

  namespace  {
    namespace ystem {
      class system.StaffParser {
          - allAppointmentOutcomeRecords : ArrayList<AppointmentOutcomeRecord>
          - storage : ArrayList<Inventory>
          + StaffParser()
          + parse()
      }
    }
  }
  

  system.AdministratorParser .up.|> system.CSVReader.CSVParser
  system.CSVReader +-down- system.CSVReader.CSVParser
  system.DoctorParser .up.|> system.CSVReader.CSVParser
  system.DoctorParser o-- model.Available : availableDates
  system.InventoryParser .up.|> system.CSVReader.CSVParser
  system.PatientParser .up.|> system.CSVReader.CSVParser
  system.PatientParser o-- model.Available : availableDates
  system.PharmacistParser .up.|> system.CSVReader.CSVParser
  system.PharmacistParser o-- model.Available : availableDates
  system.StaffParser .up.|> system.CSVReader.CSVParser
  system.StaffParser o-- model.Available : availableDates


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
